src/objects/Apttus_Legacy_Quote__c.object
<CustomObject>
    <description>Data storage object for basic legacy Apttus quote information</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Apttus_Legacy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GM_Target_Achieved__c</fullName>
        <label>GM Target Achieved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INTERNAL_Notes_to_Approvers__c</fullName>
        <label>INTERNAL Notes to Approvers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Quote_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quote Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Date__c</fullName>
        <label>Last Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Rejection_Date__c</fullName>
        <label>Last Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Approval_Level__c</fullName>
        <label>Most Recent Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Hardware and 3rd Party Approved</fullName>
                </value>
                <value>
                    <fullName>Sales Director Approved</fullName>
                </value>
                <value>
                    <fullName>Operations Approved</fullName>
                </value>
                <value>
                    <fullName>Finance Approved</fullName>
                </value>
                <value>
                    <fullName>VP of Sales Approved</fullName>
                </value>
                <value>
                    <fullName>Green Team Approved</fullName>
                </value>
                <value>
                    <fullName>COO/CFO/CEO Approved</fullName>
                </value>
                <value>
                    <fullName>Quote Approved - Final</fullName>
                </value>
                <value>
                    <fullName>Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>COO Approved</fullName>
                </value>
                <value>
                    <fullName>CFO/CEO Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Contract_Required__c</fullName>
        <label>New Contract Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Apttus_Legacy_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Optional_T_C__c</fullName>
        <label>Optional T&amp;C</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Defined by Client RFP</fullName>
                </value>
                <value>
                    <fullName>Quote Defined by Client Discussions</fullName>
                </value>
                <value>
                    <fullName>Services Not to Exceed 3 Months</fullName>
                </value>
                <value>
                    <fullName>Services Not to Exceed 6 Months</fullName>
                </value>
                <value>
                    <fullName>Services Not to Exceed 9 Months</fullName>
                </value>
                <value>
                    <fullName>Services Not to Exceed 12 Months</fullName>
                </value>
                <value>
                    <fullName>Services Not to Exceed 15 Months</fullName>
                </value>
                <value>
                    <fullName>Services Not to Exceed 18 Months</fullName>
                </value>
                <value>
                    <fullName>Services Not to Exceed 24 Months</fullName>
                </value>
                <value>
                    <fullName>Pilot Project Cost Discounted</fullName>
                </value>
                <value>
                    <fullName>Pilot License Period 45 Days</fullName>
                </value>
                <value>
                    <fullName>License Provisions Pertain to Pilot SW</fullName>
                </value>
                <value>
                    <fullName>SW Support Included During Pilot Period</fullName>
                </value>
                <value>
                    <fullName>Pilot SW Installed with Client MS SW</fullName>
                </value>
                <value>
                    <fullName>Client to Remove Pilot SW after 30 Days</fullName>
                </value>
                <value>
                    <fullName>Pilot System Purchase Requires New SO</fullName>
                </value>
                <value>
                    <fullName>Installation Services Not Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Quote_Total_with_Tax__c</fullName>
        <label>Overall Quote Total with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>50/50 - 50% Upfront &amp; 50% Installation</fullName>
                </value>
                <value>
                    <fullName>50/50 plus 100% 3rd Party</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
                <value>
                    <fullName>100% Upon Installation (Restricted)</fullName>
                </value>
                <value>
                    <fullName>Milestone Payments (LARGE quotes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presented_Date__c</fullName>
        <label>Presented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Apttus_Legacy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Related_Fees__c</fullName>
        <label>Project Related Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Total__c</fullName>
        <label>Project Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Date__c</fullName>
        <label>Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Legacy Quote Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Apttus record type</description>
        <label>Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Override__c</fullName>
        <label>Sales Tax (Override)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percent__c</fullName>
        <label>Sales Tax Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Summary_Notes_Section__c</fullName>
        <label>Summary Notes Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Notes_Internal_Only__c</fullName>
        <label>Tax Notes (Internal Only)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_State__c</fullName>
        <label>Tax State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxable_Items__c</fullName>
        <label>Taxable Items</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxable_Sales__c</fullName>
        <label>Taxable Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Custom_Solutions__c</fullName>
        <label>Total - Custom Solutions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount__c</fullName>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hardware__c</fullName>
        <label>Total - Hardware</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Implementation_Service_Fees__c</fullName>
        <label>Total - Implementation Service Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Maint_Amount__c</fullName>
        <label>Total Maint Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Perform_Admin_System__c</fullName>
        <label>Total - Perform Admin System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Perform_CAD_System__c</fullName>
        <label>Total - Perform CAD System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Perform_Fire_Records_System__c</fullName>
        <label>Total - Perform Fire Records System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Perform_Law_Records_System__c</fullName>
        <label>Total - Perform Law Records System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Perform_Mobile_System__c</fullName>
        <label>Total - Perform Mobile System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Perform_Third_Party__c</fullName>
        <label>Total - Perform Third Party</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Discount_Percentage__c</fullName>
        <label>Total Quote Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Recurring_Fees__c</fullName>
        <label>Total - Recurring Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Software__c</fullName>
        <label>Total - Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Third_Party__c</fullName>
        <label>Total - Third Party</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valid_Until_Date__c</fullName>
        <label>Valid Until Date</label>
        <type>Date</type>
    </fields>
    <label>Apttus Legacy Quote - READ ONLY</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Price_List__c</columns>
        <columns>Is_Quote_Primary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Legacy Apttus Quotes - Read Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_GSA</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Price_List__c</columns>
        <columns>Is_Quote_Primary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_List__c</field>
            <operation>equals</operation>
            <value>GSA</value>
        </filters>
        <label>GSA Legacy Apttus Quotes - Read Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inform</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Price_List__c</columns>
        <columns>Is_Quote_Primary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_List__c</field>
            <operation>equals</operation>
            <value>Inform</value>
        </filters>
        <label>Inform Legacy Apttus Quotes - Read Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Perform</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Price_List__c</columns>
        <columns>Is_Quote_Primary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_List__c</field>
            <operation>equals</operation>
            <value>Perform</value>
        </filters>
        <label>Perform Legacy Apttus Quotes - Read Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Apttus Legacy Quote Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus Legacy Quotes - READ ONLY</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>